# PATHetic

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build.gradle  shared_library_cmake_gen.py
include/control/: pid_coeffecients.hh  pidf_controller.hh
include/followers/: tank_pidva_follower.hh  trajectory_follower.hh
include/kinematics/: kinematics.hh  tank_kinematics.hh
include/math/: general.hh  pose2d.hh  vector2d.hh
include/path/: parametric_curve.hh  quintic_polynomial.hh  quintic_spline.hh
include/path/heading/: heading_interpolator.hh
include/profile/: motion_profile.hh  motion_segment.hh  motion_state.hh  profile_generator.hh
include/spline/: quintc_hermite_spline.hh  spline.hh  spline_parametrizer.hh
include/test/: kinematics_test.hh
include/trajectory/constraints/: drive_constraints.hh
src/control/: pid_coeffecients.cc  pidf_controller.cc
src/kinematics/: kinematics.cc  tank_kinematics.cc
src/math/: pose2d.cc  vector2d.cc
src/path/: parametric_curve.cc  quintic_polynomial.cc  quintic_spline.cc
src/path/heading/: heading_interpolator.cc
src/profile/: motion_profile.cc  motion_segment.cc  motion_state.cc  profile_generator.cc
src/spline/: quintic_hermite_spline.cc
src/test/: spline_test.cc
src/trajectory/constraints/: drive_constraints.cc
